# rxcli

./: LICENSE  README.md  pyproject.toml
src/rxcli/: __init__.py  ax.py  cli.py  pipeline.py  rx.py
src/rxcli/modules/: breath_control.py  de_ess.py  de_reverb.py  debleed.py  mouth_declick.py  normalize.py  spectral_denoise.py  voice_denoise.py
